--- a/ClientAstree/Views/AutomobileContract/MyContract.cshtml
+++ b/ClientAstree/Views/AutomobileContract/MyContract.cshtml
@@ -124,7 +124,7 @@
                                             <span class="badge badge-success">@guarantee</span>
                                         }
                                     </p>
-                                    <a href="@Url.Action("Details", "AutomobileContract", new { id = contract.Id })" class="btn btn-primary">View Details</a>
+                                    <a href="@Url.Action("ContractDetails", "AutomobileContract", new { id = contract.Id })" class="btn btn-primary">View Details</a>
                                 </div>
                             </div>
                         </div>
